@@ -1,7 +1,7 @@
 # file GENERATED by distutils, do NOT edit
 CHANGES.txt
 LICENSE.txt
-README.md
+README.txt
 setup.py
 pybrewer\__init__.py
 pybrewer\brew.py
