@@ -1,0 +1,4 @@
+PyBrewer
+========
+
+Python wrapper on Cynthia Brewer and Mark Harrower's Color Brewer (http://colorbrewer2.org/).
