@@ -1,1 +1,3 @@
 v<0.1.0>, <01/21/2013> --initial release.
+v<0.1.1>, <01/21/2013> --fixed setup.py, should install now
+v<0.1.2>, <01/21/2013> --fixed Mark Harrower's name in readme. Sorry. 
